--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Etch-a-sketch</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/app.js" defer></script>
 </head>
 
 <body>
-
+    <button id="sizeBtn">Change grid size</button>
+    <div class="container"></div>
 </body>
 
 </html>
